@@ -1,3 +1,7 @@
+2008-07-21 Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* demo/google_sky/event_client.pl: Fixes for $name
+	
 2008-07-10 Alasdair Allan <aa@astro.ex.ac.uk>
 
 	* eSTAR/Broker/Handler.pm & bin/event_broker.pl: Caught rogue
